<resources>
<string name="app_name">VoiceMe</string>
<!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="username">Full Name</string>
<string name="phone_number">Mobile number</string>
<string name="verification_code">6-digit code</string>
<string name="login">Next</string>
<string name="verification">Next</string>
<string name="signup">Home</string>
<string name="logout">Logout</string>
<string name="process">Process : </string>
<string name="display_username">User Name</string>
<string name="type_message">Send a message</string>
<string name="hello">hello</string>
    <string name="zero">0:00</string>
    <string name="enter_mobile_number">Enter mobile number and login</string>
    <string name="three">3</string>
    <string name="twoo">2</string>
    <string name="one">1</string>
    <string name="verify_otp">We sent OTP code to verify your mobile number</string>
    <string name="enter_full_name">Enter your full name</string>
</resources>